<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/help_description"
			android:layout_margin="5px" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/help_step_1_title"
			android:background="#ccf0f0f0" android:padding="5px"
			android:textColor="#ff333333" />
		<TextView android:text="@string/help_step_1_description"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="5px" android:paddingLeft="3px"
			android:paddingRight="3px" />
		<Button android:text="@string/help_link_to_get_animeone_account"
			android:id="@+id/button_link_to_animeone" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center" />
		<TextView android:text="@string/help_step_2_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:background="#ccf0f0f0" android:padding="5px"
			android:textColor="#ff333333" />
		<TextView android:text="@string/help_step_2_description"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="5px" android:paddingLeft="3px"
			android:paddingRight="3px" />
		<Button android:text="@string/help_link_to_setting" android:id="@+id/button_link_to_setting"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:layout_gravity="center" />
		<TextView android:text="@string/help_step_3_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:background="#ccf0f0f0" android:padding="5px"
			android:textColor="#ff333333" />
		<TextView android:text="@string/help_step_3_description"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="5px" android:paddingLeft="3px"
			android:paddingRight="3px" />
	</LinearLayout>
</ScrollView>