<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="About" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<TextView android:text="@string/label_about_version"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:text="@string/app_version"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:text="@string/label_about_author"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:text="@string/app_author_name"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:text="@string/app_author_mail" android:id="@+id/mail"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
</ScrollView>